# guardians

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: email_agent.py  guarded_agent.py
src/guardians/: __init__.py  conditions.py  errors.py  execute.py  policy.py  results.py  safe_eval.py  tools.py  verify.py  workflow.py
src/guardians/adapters/: __init__.py  agent.py  litellm.py  planner.py
tests/adapters/: test_agent.py  test_planner.py
tests/core/: test_conditions.py  test_execute.py  test_import.py  test_safe_eval.py  test_scope.py  test_verify.py  test_workflow.py
